# calculator_cli_cpp

./: CMakeLists.txt  README.md  main.cpp
calculator_cli/: CMakeLists.txt  main.cpp
calculator_cli/commands/: Command.cpp  Command.h  CommandExecutor.cpp  CommandExecutor.h
calculator_cli/operations/: Operation.cpp  Operation.h  OperationsList.cpp  OperationsList.h  operation.cpp  operation.h
calculator_cli/operations/binary/: BinaryCumulativeOperation.cpp  BinaryCumulativeOperation.h  BinaryNonCumulativeOperation.cpp  BinaryNonCumulativeOperation.h
calculator_cli/operations/binary/operations/: AddOperation.cpp  AddOperation.h  DivOperation.cpp  DivOperation.h  MulOperation.cpp  MulOperation.h  PowOperation.cpp  PowOperation.h  SubOperation.cpp  SubOperation.h
calculator_cli/operations/unary/: UnaryOperation.cpp  UnaryOperation.h
calculator_cli/operations/unary/operations/: SqrtOperation.cpp  SqrtOperation.h
commands/: CommandExecutor.cpp  CommandExecutor.h
